@@ -2,7 +2,21 @@
 
 ## Installation
 
-Vous pouvez installer cette application en cliquant [ici](https://github.com/Fyelne/Projet-PNR/releases)
+Pour installer l'application il vous faut d'abord mysql et javaFX
+
+Après avoir installé ces 2 dépendances, connectez vous à votre utilisateur root mysql :
+
+> \connect root@localhost `<votre mdp>`
+
+Ensuite lancer le script <script.sql>
+
+> \source `<emplacement de votre script.sql>`
+
+Votre base de donnée est maintenant créée, pour lancer l'application il faut lancer cette commande :
+
+> java  --module-path `<emplacement du dossier lib de votre javaFX>` --add-modules javafx.controls,javafx.fxml -jar Projet-PNR.jar
+
+Votre application est maintenant lancée !
 
 ## Projet PNR
 
@@ -15,17 +29,10 @@ Le Parc Naturel Régional est un parc naturel français se situant dans le golfe
 Pour répondre à la demande du client, nous avons intégré de nombreuses différentes fonctionnalités qui vont permettre de centraliser et d’automatiser les différentes actions à effectuer sur les données du parc. Le logiciel va permettre de grandement faciliter la gestion des données pour rendre plus simple le travail des membres du parc. De ce fait, le logiciel doit concentrer de nombreuses fonctionnalités :
 
 - Faciliter la visualisation et recherche des données grâce à des filtres et une barre de recherche.
-
 - Générer des rapports ou des graphiques en choisissant les données.
-
-- Faciliter la saisie des données avec des champs simples et prédéfinis. 
-
-- Modification ou suppression des données déjà saisies. 
-
+- Faciliter la saisie des données avec des champs simples et prédéfinis.
+- Modification ou suppression des données déjà saisies.
 - Posséder une interface graphique simple et intuitif pour permettre à tous de l’utiliser facilement.
-
 - Avoir une gestion de compte avec différents droits et donc avec la présence d’un compte administrateur.
-
 - Possibilité pour l’administrateur de modifier les champs disponibles lors de la saisie de relevé.
-
 - Importation de données à partir d’un fichier.
